add icon and update navbar

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -13,3 +13,19 @@
     position: absolute;
     top: 0;
 }
+
+.list {
+    display: flex;
+    list-style-type: none;
+}
+
+nav {
+    background-color: #384460  ;
+    display: flex;
+    justify-content: space-between
+}
+
+.top-logo {
+width: 200px;
+height: 200px;
+}
