--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -17,6 +17,7 @@
 .list {
     display: flex;
     list-style-type: none;
+    align-items:center;
 }
 
 nav {
@@ -24,6 +25,7 @@ nav {
     display: flex;
     justify-content: space-between;
     height: 150px;
+
 }
 
 .top-logo {
@@ -35,6 +37,7 @@ height: 200px;
     visibility: hidden;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 1032px) {
     .menu {background: blue;}
+    .hidden {visibility: visible;}
   }
