--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -18,26 +18,32 @@
     display: flex;
     list-style-type: none;
     align-items:center;
+
 }
 
-nav {
+.nav {
     background-color: #384460  ;
     display: flex;
     justify-content: space-between;
-    height: 150px;
+    height: 130px;
 
 }
 
 .top-logo {
-width: 200px;
-height: 200px;
+width: 180px;
+height: 180px;
 }
 
-.hidden {
+.burger {
     visibility: hidden;
+    z-index: 1;
 }
 
 @media only screen and (max-width: 1032px) {
     .menu {background: blue;}
-    .hidden {visibility: visible;}
+    .burger {visibility: visible; }
+    .list {visibility: hidden;}
+    .nopop {visibility: hidden;}
+    .pop {visibility: visible;}
+
   }
