--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,7 +1,9 @@
 
+
 .menu {
     font-weight: bold;
     color: white;
+    margin: 50px
 
 }
 
@@ -52,6 +54,6 @@ height: 180px;
     .list {visibility: hidden;}
     .hide-menu {visibility: hidden;}
     .show-menu {visibility: visible; height: 100vh; width: 100vh; background-color: blue;}
-    .burger {margin-right: 100px;font-size: 5vh; object-fit: contain;}
+    .burger {margin-right: 100px;font-size: 7vh; object-fit: contain; margin: 10px; margin-right: 1000px}
 
   }
