--- a/src/components/Contactform/Contactform.css
+++ b/src/components/Contactform/Contactform.css
@@ -1,3 +1,19 @@
 .box {
     border: 3px solid green;
 }
+
+.input-info {
+    background-color: aqua;
+    text-align: center;
+}
+
+.header-info {
+    text-align: center;
+
+}
+
+.content {
+    text-align: center;
+    border: 3px solid green;
+    margin-left: 34px;
+}
