--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -1,3 +1,30 @@
+
+
+.skill-title {
+    font-size: 70px;
+}
+
+.container {
+    display:flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding:10%
+}
+
 .Skills {
     height: 100vh;
+    text-align: center;
+    object-fit: cover;
 }
+
+.skill-icons {
+    margin-top:50px;
+    transition: transform .2s; /* Animation */
+    width: 180px;
+    height: 180px;
+}
+.skill-icons:hover {
+    -ms-transform: scale(1.1); /* IE 9 */
+    -webkit-transform: scale(1.5); /* Safari 3-8 */
+    transform: scale(1.5);
+  }
