--- a/src/components/Contactform/Contactform.css
+++ b/src/components/Contactform/Contactform.css
@@ -6,7 +6,7 @@
 }
 
 .input-info {
-    background-color: aqua;
+    background-color: #f2f2f2;
     text-align: center;
 }
 
@@ -20,3 +20,14 @@
     border: 3px solid green;
     margin-left: 34px;
 }
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
