--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -57,3 +57,8 @@ height: 180px;
     .burger {margin-right: 100px;font-size: 7vh; object-fit: contain; margin: 10px; margin-right: 1000px}
 
   }
+
+  a:hover {
+    background-color: yellow;
+    
+  }
