--- a/src/components/Contactform/Contactform.css
+++ b/src/components/Contactform/Contactform.css
@@ -20,3 +20,18 @@
     border: 3px solid green;
     margin-left: 34px;
 }
+
+input {
+    border: 2px solid #4b4646;
+    margin-bottom: 0.7rem;
+    padding-left: 0.7rem;
+    height: 2.5rem;
+    font-size: 100%;
+}
+
+textarea {
+    border: 2px solid #4b4646;
+    margin-bottom: 0.7rem;
+    padding-left: 0.7rem;
+    font-size: 100%;
+}
