--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,4 +1,7 @@
 
+/* .nav {
+display: flex;
+} */
 
 .menu {
     font-weight: bold;
@@ -24,7 +27,7 @@
 
 }
 
-.nav {
+.navbar {
     background-color: #384460  ;
     display: flex;
     height: 130px;
@@ -54,8 +57,8 @@ height: 10px;
     .burger {visibility: visible; }
     .list {visibility: hidden;}
     .hide-menu {visibility: hidden;}
-    .show-menu {visibility: visible; height: 100vh; background-color: blue; justify-content: center;}
-    .burger {margin-right: 100px;font-size: 7vh; object-fit: contain; margin: 10px; margin-right: 1000px}
+    .show-menu {visibility: visible; height: 90vh; background-color: blue; justify-content: center;}
+    /* .burger {font-size: 7vh; object-fit: contain; margin: 10px; margin-right: 1000px} */
 
   }
 
