add typewriter in home and fix route in home navbar

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -45,6 +45,15 @@ height: 10px;
 
 }
 
+.socials {
+    display: flex;
+    margin:50px;
+    padding: 20px;
+    /* justify-content: center; */
+    /* align-items: center; */
+
+}
+
 
 
 /* .fa-solid {
