--- a/src/components/Contactform/Contactform.css
+++ b/src/components/Contactform/Contactform.css
@@ -21,7 +21,7 @@
     margin-left: 34px;
 }
 
-input {
+.infield {
     border: 2px solid #4b4646;
     margin-bottom: 0.7rem;
     padding-left: 0.7rem;
@@ -39,4 +39,10 @@ textarea {
 ul.show-menu {
     display: none;
 
+}
+
+.submit {
+    background: palegreen;
+    font-weight: bold;
+    padding: 20px;
 }
