--- a/src/components/Contactform/Contactform.css
+++ b/src/components/Contactform/Contactform.css
@@ -1,9 +1,7 @@
 
 .box {
-    height: 100vh;
     align-items: center;
-    padding-top:300px;
-
+    padding-top:200px;
 }
 
 .input-info {
@@ -49,7 +47,13 @@ ul.show-menu {
 }
 
 .contactContainer {
-    display: flex;
+
     justify-content: center;
-    align-items: center;
+    align-items:flex-end;
+    height: 100vh;
+}
+
+.React {
+    font-weight: bold;
+    padding-top: 350px;
 }
