--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -14,6 +14,10 @@
     background: var(--bg-color);
   }
 
+  h2 {
+    color: #F14E32;
+  }
+
   h1 {
     font-size: clamp(1rem, 3vw + 1rem, 4rem);
     position: relative;
