--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -4,14 +4,17 @@
 }
 
 .projectContainer {
-    background-color:palegreen;
+    background-color:#f2f2f2;
     align-items: center;
+    border-radius: 100px;
 
 }
 
 .technologies {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
+    /* background-color: #b5c8ca; */
 }
 
 .text {
@@ -21,4 +24,15 @@ text-align: center;
 .gif {
     width: 500px;
   height: auto;
+}
+
+ul {
+    list-style: none;
+    font-weight: bold;
+}
+
+.tech {
+    padding: 10px;
+    border: 1px solid;
+    background-color: white;
 }
