--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -9,7 +9,7 @@
     justify-content: space-between;
     flex-wrap: wrap;
     padding:10%;
-    border: 3px solid green;
+    border: 3px solid #F14E32;
 
 }
 
