--- a/src/components/Contactform/Contactform.css
+++ b/src/components/Contactform/Contactform.css
@@ -53,7 +53,11 @@ ul.show-menu {
     height: 100vh;
 }
 
-.React {
+.bottom {
     font-weight: bold;
     padding-top: 350px;
+}
+
+.socials {
+    justify-content: center;
 }
