--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,8 +1,7 @@
 .about-info {
-    border: 2px solid #4b4646;
-    margin: 30px;
+    border: 2px solid #F14E32;
+    margin: 20px;
     height: 100vh;
-    padding: 200px;
 
 }
 
@@ -31,5 +30,5 @@
 }
 
 .text-content {
-    font-size: x-large;
+    font-size: ;
 }
