--- a/src/components/Contactform/Contactform.css
+++ b/src/components/Contactform/Contactform.css
@@ -61,3 +61,12 @@ ul.show-menu {
 .socials {
     justify-content: center;
 }
+
+/* .messageContainer {
+    display: flex;
+    justify-content: end;
+    flex-wrap: wrap;}
+
+.mail {
+padding-left: 215px;
+} */
