change home button to Inter

--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -106,7 +106,7 @@
     width: 380px;
     height: 86px;
     font-size: 36px;
-    font-family: 'Bebas Neue', cursive;
+    font-family: "Inter", cursive;
     background: linear-gradient(45deg, transparent 5%, #F14E32 5%);
     border: 0;
     color: #fff;
