--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,8 +1,7 @@
-
-/* .nav {
-display: flex;
-} */
-
+* {
+    margin: 0px;
+    padding: 0px;
+}
 .menu {
     font-weight: bold;
     color: white;
@@ -10,17 +9,13 @@ display: flex;
 
 }
 
-.menu2 {
+/* .menu2 {
     visibility: hidden;
 
-}
+} */
 
-.logo {
-    background: pink;
-    width: 10%;
-    height: 10%;
-    position: absolute;
-    top: 0;
+.top-logo {
+    width: 150px;
 }
 
 .list {
@@ -28,39 +23,29 @@ display: flex;
     justify-content:space-evenly;
     list-style-type: none;
     align-items:center;
-    /* margin-right: 50px; */
+    display: flex;
+    height: 150px;
 
 }
 
-.navbar {
+nav {
     background-color: #384460  ;
-    display: flex;
-    height: 130px;
 
 }
 
 .burger {
-    visibility: hidden;
+    /* visibility: hidden; */
     z-index: 1;
+    justify-content: end;
 
 }
 
-.socials {
-    display: flex;
-    margin:50px;
-    padding: 20px;
-    /* justify-content: center; */
-    /* align-items: center; */
-
-}
-
-
-@media only screen and (max-width: 1032px) {
+@media only screen and (max-width: 1080px) {
     .menu {background: blue; margin: 0px; display: flex;justify-content: center; margin: auto;}
     .burger {visibility: visible; }
     .list {visibility: hidden;}
     .hide-menu {visibility: hidden;}
-    .show-menu {visibility: visible; height: 90vh; background-color: blue; justify-content: center;}
+    /* .show-menu {visibility: visible; height: 90vh; background-color: blue; justify-content: center;} */
     /* .burger {font-size: 7vh; object-fit: contain; margin: 10px; margin-right: 1000px} */
 
   }
