--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -1,25 +1,46 @@
-.container {
+.skillContainer {
     display:flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    justify-content: center;
     border: 3px solid #F14E32;
     margin: 20px;
-    height: 60vh;
-    padding-top: 350px;
+    flex-wrap: wrap;
+
+
 }
 
-.Skills {
+/* .Skills {
     text-align: center;
-}
+} */
 
 .skill-icons {
-    margin-top:50px;
+    margin:50px;
     transition: transform .2s; /* Animation */
-    width: 180px;
-    height: 180px;
+    width: 120px;
+    height: 120px;
+    display: flex;
 }
+
 .skill-icons:hover {
     -ms-transform: scale(1.1); /* IE 9 */
     -webkit-transform: scale(1.5); /* Safari 3-8 */
     transform: scale(1.5);
+  }
+
+  ul {
+    list-style-type: none;
+
+  }
+
+  .skill-list {
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex: 2;
+
+  }
+
+
+@media only screen and (max-width: 771px) {
+    .skill-icons {width: 33.33333%; height: 70px;}
+    .skillContainer { flex-direction:column;}
   }
