make contact mobile resposnive

--- a/src/components/Contactform/Contactform.css
+++ b/src/components/Contactform/Contactform.css
@@ -66,11 +66,6 @@ ul.show-menu {
     justify-content: center;
 }
 
-/* .messageContainer {
-    display: flex;
-    justify-content: end;
-    flex-wrap: wrap;}
-
-.mail {
-padding-left: 215px;
-} */
+.note {
+    padding: 15px;
+}
