--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -15,9 +15,17 @@
     height:18em;
 }
 
+
 .text-content {
     font-size:x-large;
+}
 
+.text-me {
+    padding: 1rem;
+}
+
+.summary {
+    padding: 2rem;
 }
 
   @media only screen and (max-width: 880px) {
