--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -2,10 +2,9 @@
     /* align-items: center; */
     padding: 1rem;
     background-color: #384460 ;
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     left: 0;
-    width: 100%;
     z-index: 1;
     display: flex;
     justify-content: center;
@@ -16,10 +15,12 @@
   }
 
   .container {
-    display: flex;
+    /* display: flex; */
     justify-content: space-between;
     align-items: center;
-    max-width: 1200px;
+    /* max-width: 1200px; */
+    /* width: 100vh; */
+
     margin: 0 auto;
   }
 
@@ -91,10 +92,10 @@
       display: none;
       justify-content: none;
     }
-    .container {
+    /* .container {
       flex-direction: column;
       align-items: flex-start;
-    }
+    } */
     .burger {
       visibility: visible;
       text-align: end;
@@ -147,6 +148,16 @@
     .nav-mobile {
     justify-content: center;
     }
+
+    .responsive_nav {
+      height: 25vh;
+    }
+/*
+    nav .nav-close-btn {
+      position: absolute;
+      top: 2rem;
+      right: 2rem;
+    } */
 
   }
 
