--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 
-h2 {
-  font-family: 'Inter', sans-serif;
+* {
+  font-size:large;
+
 }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Inter','Segoe UI', 'Roboto', 'Oxygen',
@@ -19,4 +21,10 @@ code {
 
 .skill-title {
   font-size: 70px;
+}
+
+
+p {
+  font-weight: bold;
+  color: #5c5c5c;
 }
