--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -34,6 +34,9 @@ header {
     justify-content: center;
   }
 
+  h1 {
+    color: #5c5c5c;
+  }
 
   h1::before,
   h1::after {
@@ -43,6 +46,7 @@ header {
     right: 0;
     bottom: 0;
     left: 0;
+
   }
 
   h1::before {
@@ -53,7 +57,7 @@ header {
 
   h1::after {
     width: 0.125em;
-    background: black;
+    background: #5c5c5c;
     animation: typewriter var(--typewriterSpeed)
         steps(var(--typewriterCharacters)) 1s forwards,
       blink 750ms steps(var(--typewriterCharacters)) infinite;
@@ -61,8 +65,8 @@ header {
 
   .subtitle {
     color: hsl(0 0% 0% / 0.7);
-    font-size: 2rem;
-    font-weight: 400;
+    font-size: 1.5rem;
+    font-weight: bold;
     opacity: 0;
     transform: translateY(3rem);
     animation: fadeInUp 2s ease calc(var(--typewriterSpeed) + 2s) forwards;
@@ -124,7 +128,8 @@ header {
     justify-content: center;
     display: block;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
+    font-weight: bold;
   }
 
   .button-1::after {
@@ -135,7 +140,7 @@ header {
     --slice-4: inset(40% -6px 43% 0);
     --slice-5: inset(80% -6px 5% 0);
 
-    content: 'AVAILABLE NOW';
+    content: 'CLICK HERE';
     display: block;
     position: absolute;
     top: 0;
