--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,157 +1,154 @@
 .nav {
-    padding: 1rem;
-    background-color: #384460 ;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-  }
+  padding: 1rem;
+  background-color: #384460;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+}
 
-  .burger {
-    visibility: hidden;
-  }
+.burger {
+  visibility: hidden;
+}
 
-  .container {
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
-  }
+.container {
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+}
 
-  .top-logo {
-    height: 50px;
-  }
+.top-logo {
+  height: 50px;
+}
 
-  .list {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
+.list {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
-  .menu {
-    margin: 0 1rem;
-    display: flex;
-    align-items: center;
-  }
+.menu {
+  margin: 0 1rem;
+  display: flex;
+  align-items: center;
+}
 
-  .menu a {
-    color: white;
-    text-decoration: none;
-    font-size: 1.2rem;
+.menu a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+.contact {
+  background-color: #f14e32;
 
- }
-  .contact {
-    background-color: #F14E32;
+  border-radius: 9999px;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 700;
+  letter-spacing: 0.025em;
+  line-height: 24px;
+  line-height: 1;
+  overflow: hidden;
+  padding: 18px 1.5rem;
+  text-align: center;
+  transition-duration: 0.15s;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-    border-radius: 9999px;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 16px;
-    font-weight: 700;
-    letter-spacing: .025em;
-    line-height: 24px;
-    line-height: 1;
-    overflow: hidden;
-    padding: 18px 1.5rem;
-    text-align: center;
-    transition-duration: .15s;
-    transition-property: all;
-    transition-timing-function: cubic-bezier(.4,0,.2,1);  }
+.hamburger {
+  display: none;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
 
+.hamburger span {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px;
+  background-color: white;
+  transition: transform 0.2s ease-in-out;
+}
 
-  .hamburger {
+.hide-menu {
+  visibility: hidden;
+}
+
+/* media query for screens smaller than 800px */
+@media only screen and (max-width: 800px) {
+  .av {
     display: none;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
+    justify-content: none;
   }
-
-  .hamburger span {
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px;
-    background-color: white;
-    transition: transform 0.2s ease-in-out;
-  }
-
-  .hide-menu {
-    visibility: hidden;
-  }
-
-  /* media query for screens smaller than 800px */
-  @media only screen and (max-width: 800px) {
-    .av {
-      display: none;
-      justify-content: none;
-    }
-    /* .container {
+  /* .container {
       flex-direction: column;
       align-items: flex-start;
     } */
-    .burger {
-      visibility: visible;
-      text-align: end;
-    }
+  .burger {
+    visibility: visible;
+    text-align: end;
+  }
 
-    .icon {
-      padding: 30px;
-    }
+  .icon {
+    padding: 30px;
+  }
 
-    .list {
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-    }
-
-    .menu {
-      margin: 1rem 0;
-    }
-
-    .hamburger {
-      display: block;
-    }
-
-    .show-menu {
-      display: flex;
-      visibility:visible;
-    }
-
-    .menu2 {
-      margin: 1rem 0;
-      text-align: center;
-    }
-
-    .menu2 a {
-      display: block;
-      padding: 1rem;
-      border-bottom: 1px solid white;
-      font-size: 1.2rem;
-      color: white;
-      text-decoration: none;
-    }
-
-    .hide-menu {
-      display: none;
-    }
-
-    .nav-mobile {
+  .list {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    display: flex;
     justify-content: center;
-    }
+  }
 
-    .responsive_nav {
-      height: 25vh;
-    }
-/*
+  .menu {
+    margin: 1rem 0;
+  }
+
+  .hamburger {
+    display: block;
+  }
+
+  .show-menu {
+    display: flex;
+    visibility: visible;
+  }
+
+  .menu2 {
+    margin: 1rem 0;
+    text-align: center;
+  }
+
+  .menu2 a {
+    display: block;
+    padding: 1rem;
+    border-bottom: 1px solid white;
+    font-size: 1.2rem;
+    color: white;
+    text-decoration: none;
+  }
+
+  .hide-menu {
+    display: none;
+  }
+
+  .nav-mobile {
+    justify-content: center;
+  }
+
+  .responsive_nav {
+    height: 25vh;
+  }
+  /*
     nav .nav-close-btn {
       position: absolute;
       top: 2rem;
       right: 2rem;
     } */
-
-  }
-
+}
