--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -3,10 +3,13 @@
   justify-content: space-evenly;
 }
 
+
 .projectContainer {
   background-color: #f2f2f2;
   align-items: center;
   border-radius: 100px;
+  border: 2px solid #007BFF;
+  margin: 50px;
 }
 
 .technologies {
