--- a/src/App.scss
+++ b/src/App.scss
@@ -49,3 +49,32 @@ textarea {
   animation: fadeOut 1s 1s;
   animation-fill-mode: forwards;
 }
+
+
+* {
+  font-size: large;
+}
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Inter", "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: Inter, source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
+.skill-title {
+  font-size: 70px;
+  text-shadow: 2px 2px grey;
+}
+
+p {
+  font-weight: bold;
+  color: #5c5c5c;
+}
