--- a/src/App.scss
+++ b/src/App.scss
@@ -1,31 +1,31 @@
 
 
 
-@import 'animate.css';
-// @import '~loaders.css/src/animations/pacman.scss';
+// @import 'animate.css';
+// // @import '~loaders.css/src/animations/pacman.scss';
 
-@font-face {
-  font-family: 'Helvetica Neue';
-  src: url('./assets/fonts/helvetica-neu.ttf') format('ttf');
-  font-weight: normal;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'Helvetica Neue';
+//   src: url('./assets/fonts/helvetica-neu.ttf') format('ttf');
+//   font-weight: normal;
+//   font-style: normal;
+// }
 
-@font-face {
-  font-family: 'La Belle Aurore';
-  src: url('./assets/fonts/LaBelleAurore.woff2') format('woff2'),
-    url('./assets/fonts/LaBelleAurore.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'La Belle Aurore';
+//   src: url('./assets/fonts/LaBelleAurore.woff2') format('woff2'),
+//     url('./assets/fonts/LaBelleAurore.woff') format('woff');
+//   font-weight: normal;
+//   font-style: normal;
+// }
 
-@font-face {
-  font-family: 'Coolvetica';
-  src: url('./assets/fonts/CoolveticaRg-Regular.woff2') format('woff2'),
-    url('./assets/fonts/CoolveticaRg-Regular.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'Coolvetica';
+//   src: url('./assets/fonts/CoolveticaRg-Regular.woff2') format('woff2'),
+//     url('./assets/fonts/CoolveticaRg-Regular.woff') format('woff');
+//   font-weight: normal;
+//   font-style: normal;
+// }
 
 input,
 textarea {
@@ -55,14 +55,14 @@ textarea {
   font-size: large;
 }
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Inter", "Segoe UI", "Roboto",
-    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+// body {
+//   margin: 0;
+//   font-family: -apple-system, BlinkMacSystemFont, "Inter", "Segoe UI", "Roboto",
+//     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+//     sans-serif;
+//   -webkit-font-smoothing: antialiased;
+//   -moz-osx-font-smoothing: grayscale;
+// }
 
 code {
   font-family: Inter, source-code-pro, Menlo, Monaco, Consolas, "Courier New",
