add sap, oracle svg and removed unused svg

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,13 +29,14 @@ textarea {
 }
 
 
-
 .skill-title {
   font-size: 70px;
   text-shadow: 2px 2px grey;
 }
 
 p {
-  font-weight: bold;
-  color: #5c5c5c;
+  // font-family: DM Sans;
+  // font-weight: bold;
+  font-size: 1.25 rem;
+  color: #384460;
 }
