--- a/src/components/Contactform/Contactform.css
+++ b/src/components/Contactform/Contactform.css
@@ -1,5 +1,10 @@
 .input-info {
   background-color: #f2f2f2;
+  border: 2px solid red;
+  display: flex;
+  justify-content: space-between; 
+
+
 }
 
 .header-info {
