--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -45,6 +45,23 @@
   color: white;
   text-decoration: none;
   font-size: 1.2rem;
+  cursor: pointer;
+  position: relative;
+}
+
+.menu a::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  background: #f14e32;
+  left: 0;
+  bottom: -5px;
+  transition: width 0.3s ease-in-out;
+}
+
+.menu a:hover::after {
+  width: 100%;
 }
 
 .contact {
