--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -47,6 +47,7 @@
   font-size: 1.2rem;
   cursor: pointer;
   position: relative;
+  transition: color 0.3s ease-in-out;
 }
 
 .menu a::after {
@@ -62,6 +63,10 @@
 
 .menu a:hover::after {
   width: 100%;
+}
+
+.menu a:hover {
+  color: #f14e32;
 }
 
 .contact {
