--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -19,3 +19,9 @@
   }
 }
 
+.about-info {
+  padding-top: 100px;
+  margin-top: -70px;
+  min-height: 100vh; /* This ensures the section takes up full viewport height */
+}
+
