--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -82,7 +82,7 @@ html {
 }
 
 .contact {
-  background-color: #f14e32;
+  background-color: green;
   border-radius: 9999px;
   cursor: pointer;
   display: inline-block;
