--- a/src/components/Contactform/Contactform.css
+++ b/src/components/Contactform/Contactform.css
@@ -72,7 +72,7 @@ textarea {
 } */
 
 /* Add media query for narrow screens */
-/* @media only screen and (max-width: 360px) {
+@media only screen and (max-width: 360px) {
   .input-info {
     padding: 10px;
   }
@@ -92,4 +92,4 @@ textarea {
   .socials {
     gap: 10px;
   }
-} */
+}
