--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -83,8 +83,7 @@ border-radius: 999px;
 
 
   .tech {
-    padding: 1rem;
-    margin: 100px; /* Add small margin */
+     /* Add small margin */
     font-size: 0.9rem; /* Slightly smaller font */
   }
 
