--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -1,9 +1,18 @@
+.skills {
+  margin: 25px;
+}
+
 .skillContainer {
   display: flex;
   justify-content: center;
-  /* border: 3px solid #F14E32; */
   margin: 20px;
   flex-wrap: wrap;
+}
+
+.text {
+  font-size: 1.2rem;
+  font-weight: 500;
+  padding: 1rem;
 }
 
 .skill-icons {
@@ -31,6 +40,7 @@ ul {
   flex: 2;
   padding: 0;
 }
+
 
 @media only screen and (max-width: 771px) {
   .skillContainer {
